<?xml version="1.0"?>
<package format="2">
  <name>rolstoel_tester</name>
  <version>0.1.0</version>
  <description>The rolstoel_tester package</description>
  <maintainer email="rchard2scout@users.noreply.github.com">rchard2scout</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
